--- a/php.ini
+++ b/php.ini
@@ -8,3 +8,30 @@ date.timezone = UTC
 sendmail_path = /usr/sbin/sendmail -t -i
 session.gc_maxlifetime = 86400
 sys_temp_dir = /tmp
+opcache.consistency_checks = 0
+opcache.dups_fix = Off
+opcache.enable = On
+opcache.enable_cli = On
+opcache.enable_file_override = On
+opcache.file_cache_consistency_checks = 1
+opcache.file_cache_only = 0
+opcache.file_update_protection = 2
+opcache.force_restart_timeout = 180
+opcache.huge_code_pages = Off
+opcache.inherited_hack = On
+opcache.interned_strings_buffer = 48
+opcache.lockfile_path = /tmp
+opcache.log_verbosity_level = 1
+opcache.max_accelerated_files = 100000
+opcache.max_file_size = 0
+opcache.max_wasted_percentage = 5
+opcache.memory_consumption = 512
+opcache.opt_debug_level = 0
+opcache.protect_memory = 0
+opcache.revalidate_freq = 300
+opcache.revalidate_path = Off
+opcache.save_comments = 1
+opcache.use_cwd = On
+opcache.validate_permission = Off
+opcache.validate_root = Off
+opcache.validate_timestamps = Off
