--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -5,7 +5,7 @@
 [global]
 
 daemonize = no
-error_log = /log/php-fpm/php.error.log
+error_log = /var/log/php-fpm/php.error.log
 rlimit_core = 0
 
 [www]
@@ -40,5 +40,5 @@ rlimit_files = 10240
 php_admin_flag[log_errors] = on
 php_admin_value[error_log] = /var/log/php-fpm/php.error.log
 
-php_value[post_max_size]=1024M
-php_value[upload_max_filesize]=1024M
+php_value[post_max_size]=8096M
+php_value[upload_max_filesize]=8096M
